--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <article id="graduates">
 
-                    <h2 class="reveal">Progects</h2>
+                    <h2 class="reveal">Projects</h2>
                     <div class="art-deco-element"><img src="images/art-deco-logo-element2.png" alt="decoration"></div>
                     <div class="project-container"></div>
                     <div class="project-container"></div>
