--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script>
             ScrollReveal({ reset: true });
         </script>
-        <title>Grad-Show</title>
+        <title>Grad-Show-2021</title>
     </head>
 
     <body>
